--- a/SurvivalBox_App/SurvivalBox/SurvivalBox/SurvivalBox.iOS/SurvivalBox.iOS.csproj
+++ b/SurvivalBox_App/SurvivalBox/SurvivalBox/SurvivalBox.iOS/SurvivalBox.iOS.csproj
@@ -189,6 +189,15 @@
     <Reference Include="Xamarin.iOS" />
   </ItemGroup>
   <ItemGroup>
+    <PackageReference Include="Microsoft.Azure.Mobile.Client">
+      <Version>4.0.2</Version>
+    </PackageReference>
+    <PackageReference Include="Microsoft.Azure.Mobile.Client.SQLiteStore">
+      <Version>4.0.2</Version>
+    </PackageReference>
+    <PackageReference Include="Newtonsoft.Json">
+      <Version>11.0.2</Version>
+    </PackageReference>
     <PackageReference Include="Xamarin.Forms" Version="2.5.0.122203" />
     <PackageReference Include="Prism.Unity.Forms" Version="7.0.0.396" />
   </ItemGroup>
