--- a/SurvivalBox_App/SurvivalBox/SurvivalBox/SurvivalBox/SurvivalBox.csproj
+++ b/SurvivalBox_App/SurvivalBox/SurvivalBox/SurvivalBox/SurvivalBox.csproj
@@ -25,6 +25,12 @@
     <EmbeddedResource Update="Views\MainDetail01.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
+    <EmbeddedResource Update="Views\MainSettings.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
+    <EmbeddedResource Update="Views\MainWarnings.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
     <EmbeddedResource Update="Views\PasswordReset.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
