Added some icons
- SurvivalBox Icon
- Settings Icon
- Location Icon
- TodoList Icon

--- a/SurvivalBox_App/SurvivalBox/SurvivalBox/SurvivalBox.iOS/SurvivalBox.iOS.csproj
+++ b/SurvivalBox_App/SurvivalBox/SurvivalBox/SurvivalBox.iOS/SurvivalBox.iOS.csproj
@@ -173,6 +173,9 @@
     <ImageAsset Include="Assets.xcassets\AppIcon.appiconset\ItunesArtwork@2x.png">
       <Visible>false</Visible>
     </ImageAsset>
+    <ImageAsset Include="Assets.xcassets\LaunchImages.launchimage\Contents.json">
+      <Visible>false</Visible>
+    </ImageAsset>
   </ItemGroup>
   <ItemGroup>
     <BundleResource Include="Resources\Default-568h@2x.png" />
