--- a/SurvivalBox_App/SurvivalBox/SurvivalBox/SurvivalBox.UWP/SurvivalBox.UWP.csproj
+++ b/SurvivalBox_App/SurvivalBox/SurvivalBox/SurvivalBox.UWP/SurvivalBox.UWP.csproj
@@ -144,7 +144,7 @@
     <Content Include="Assets\Wide310x150Logo.scale-125.png" />
     <Content Include="Assets\Wide310x150Logo.scale-150.png" />
     <Content Include="Assets\Wide310x150Logo.scale-400.png" />
-    <Content Include="todolist_icon.png" />
+    <Content Include="home_icon.png" />
     <Content Include="location_icon.png" />
     <Content Include="Properties\Default.rd.xml" />
     <Content Include="Assets\LockScreenLogo.scale-200.png" />
@@ -154,6 +154,7 @@
     <Content Include="Assets\Square44x44Logo.targetsize-24_altform-unplated.png" />
     <Content Include="Assets\Wide310x150Logo.scale-200.png" />
     <Content Include="settings_icon.png" />
+    <Content Include="weather_icon.png" />
   </ItemGroup>
   <ItemGroup>
     <ApplicationDefinition Include="App.xaml">
