--- a/SurvivalBox_App/SurvivalBox/SurvivalBox/SurvivalBox.UWP/SurvivalBox.UWP.csproj
+++ b/SurvivalBox_App/SurvivalBox/SurvivalBox/SurvivalBox.UWP/SurvivalBox.UWP.csproj
@@ -97,6 +97,7 @@
       <DependentUpon>MainPage.xaml</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Services\SaveAndLoad_UWP.cs" />
   </ItemGroup>
   <ItemGroup>
     <AppxManifest Include="Package.appxmanifest">
