--- a/SurvivalBox_App/SurvivalBox/SurvivalBox/SurvivalBox.UWP/SurvivalBox.UWP.csproj
+++ b/SurvivalBox_App/SurvivalBox/SurvivalBox/SurvivalBox.UWP/SurvivalBox.UWP.csproj
@@ -97,6 +97,7 @@
       <DependentUpon>MainPage.xaml</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="UWP_Keys.cs" />
   </ItemGroup>
   <ItemGroup>
     <AppxManifest Include="Package.appxmanifest">
@@ -179,6 +180,9 @@
     </PackageReference>
     <PackageReference Include="Xamarin.Forms" Version="2.5.0.122203" />
     <PackageReference Include="Prism.Unity.Forms" Version="7.0.0.396" />
+    <PackageReference Include="Xamarin.Forms.Maps">
+      <Version>2.5.0.122203</Version>
+    </PackageReference>
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\SurvivalBox\SurvivalBox.csproj">
