--- a/SurvivalBox_App/SurvivalBox/SurvivalBox/SurvivalBox.iOS/SurvivalBox.iOS.csproj
+++ b/SurvivalBox_App/SurvivalBox/SurvivalBox/SurvivalBox.iOS/SurvivalBox.iOS.csproj
@@ -203,6 +203,9 @@
     </PackageReference>
     <PackageReference Include="Xamarin.Forms" Version="2.5.0.122203" />
     <PackageReference Include="Prism.Unity.Forms" Version="7.0.0.396" />
+    <PackageReference Include="Xamarin.Forms.Maps">
+      <Version>2.5.0.122203</Version>
+    </PackageReference>
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\SurvivalBox\SurvivalBox.csproj">
