--- a/SurvivalBox_App/SurvivalBox/SurvivalBox/SurvivalBox/SurvivalBox.csproj
+++ b/SurvivalBox_App/SurvivalBox/SurvivalBox/SurvivalBox/SurvivalBox.csproj
@@ -10,6 +10,7 @@
     <PackageReference Include="Newtonsoft.Json" Version="11.0.2" />
     <PackageReference Include="Xamarin.Forms" Version="2.5.0.122203" />
     <PackageReference Include="Prism.Unity.Forms" Version="7.0.0.396" />
+    <PackageReference Include="Xamarin.Forms.Maps" Version="2.5.0.122203" />
   </ItemGroup>
 
   <ItemGroup>
