--- a/.gitignore
+++ b/.gitignore
@@ -286,3 +286,7 @@ __pycache__/
 *.btm.cs
 *.odx.cs
 *.xsd.cs
+
+# API Keys
+/SurvivalBox_App/SurvivalBox/SurvivalBox/SurvivalBox/Services/b.cs
+/SurvivalBox_App/SurvivalBox/SurvivalBox/SurvivalBox.UWP/UWP_Keys.cs
