--- a/SurvivalBox_App/SurvivalBox/SurvivalBox/SurvivalBox.Android/Properties/AndroidManifest.xml
+++ b/SurvivalBox_App/SurvivalBox/SurvivalBox/SurvivalBox.Android/Properties/AndroidManifest.xml
@@ -1,6 +1,10 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android" android:versionCode="1" android:versionName="1.0" package="com.gruppe6.survivalBox" android:installLocation="auto">
-	<uses-sdk android:minSdkVersion="21" />
-	<uses-permission android:name="android.permission.INTERNET" />
-	<application android:label="SurvivalBox" android:icon="@mipmap/ic_launcher"></application>
+  <uses-sdk android:minSdkVersion="21" />
+  <uses-permission android:name="android.permission.INTERNET" />
+  <application android:label="SurvivalBox" android:icon="@mipmap/ic_launcher">
+    <meta-data
+	    android:name="com.google.android.geo.API_KEY"
+	    android:value="YOUR_API_KEY"/>
+  </application>
 </manifest>
