--- a/SurvivalBox_App/SurvivalBox/SurvivalBox/SurvivalBox.Android/SurvivalBox.Android.csproj
+++ b/SurvivalBox_App/SurvivalBox/SurvivalBox/SurvivalBox.Android/SurvivalBox.Android.csproj
@@ -83,6 +83,7 @@
     </PackageReference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="TrackerMapRenderer.cs" />
     <Compile Include="MainActivity.cs" />
     <Compile Include="Resources\Resource.Designer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
