--- a/SurvivalBox_App/SurvivalBox/SurvivalBox/SurvivalBox.Android/Properties/AndroidManifest.xml
+++ b/SurvivalBox_App/SurvivalBox/SurvivalBox/SurvivalBox.Android/Properties/AndroidManifest.xml
@@ -4,7 +4,7 @@
   <uses-permission android:name="android.permission.INTERNET" />
   <application android:label="SurvivalBox" android:icon="@mipmap/ic_launcher">
     <!-- Put your Google Maps V2 API Key here. -->
-    <meta-data android:name="com.google.android.maps.v2.API_KEY" android:value="API_KEY" />
+    <meta-data android:name="com.google.android.maps.v2.API_KEY" android:value="MAPS_ANDROID_KEY" />
     <meta-data android:name="com.google.android.gms.version" android:value="@integer/google_play_services_version" />
   </application>
 </manifest>
