--- a/SurvivalBox_App/SurvivalBox/SurvivalBox/SurvivalBox.Android/Properties/AndroidManifest.xml
+++ b/SurvivalBox_App/SurvivalBox/SurvivalBox/SurvivalBox.Android/Properties/AndroidManifest.xml
@@ -1,10 +1,13 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android" android:versionCode="1" android:versionName="1.0" package="com.gruppe6.survivalBox" android:installLocation="auto">
-  <uses-sdk android:minSdkVersion="21" />
-  <uses-permission android:name="android.permission.INTERNET" />
-  <application android:label="SurvivalBox" android:icon="@mipmap/ic_launcher">
-    <!-- Put your Google Maps V2 API Key here. -->
-    <meta-data android:name="com.google.android.maps.v2.API_KEY" android:value="MAPS_ANDROID_KEY" />
-    <meta-data android:name="com.google.android.gms.version" android:value="@integer/google_play_services_version" />
-  </application>
+	<uses-sdk android:minSdkVersion="21" />
+	<uses-permission android:name="android.permission.INTERNET" />
+	<uses-permission android:name="android.permission.BLUETOOTH" />
+	<uses-permission android:name="android.permission.BLUETOOTH_ADMIN" />
+	<uses-permission android:name="android.permission.BLUETOOTH_PRIVILEGED" />
+	<application android:label="SurvivalBox" android:icon="@mipmap/ic_launcher">
+		<!-- Put your Google Maps V2 API Key here. -->
+		<meta-data android:name="com.google.android.maps.v2.API_KEY" android:value="MAPS_ANDROID_KEY" />
+		<meta-data android:name="com.google.android.gms.version" android:value="@integer/google_play_services_version" />
+	</application>
 </manifest>
